--- a/app/src/main/res/drawable/gradient_color_half.xml
+++ b/app/src/main/res/drawable/gradient_color_half.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-    <solid android:color="#19Adef"/>
-    <corners android:topLeftRadius="70dp" android:topRightRadius="70dp"/>
+
+
+    <solid android:color="@color/primary"/>
+    <corners android:bottomRightRadius="40dp" android:bottomLeftRadius="40dp"/>
 
 </shape>
