--- a/app/src/main/res/drawable/ic_heart.xml
+++ b/app/src/main/res/drawable/ic_heart.xml
@@ -3,7 +3,7 @@
     android:viewportWidth="412.735"
     android:width="32dp"
     xmlns:android="http://schemas.android.com/apk/res/android">
-    <path android:fillColor="#FF000000"
+    <path android:fillColor="#ffff"
         android:pathData="M295.706,35.522C295.706,35.522 295.706,
 		35.522 295.706,35.522c-34.43,-0.184 -67.161,14.937
 		-89.339,41.273c-22.039,-26.516 -54.861,-41.68 -89.339,
