--- a/app/src/main/res/drawable/white_round_rectangle.xml
+++ b/app/src/main/res/drawable/white_round_rectangle.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-    <solid android:color="#19Adef"/>
-    <corners android:topLeftRadius="70dp" android:topRightRadius="70dp"/>
+    <solid android:color="#ffff"/>
+    <corners android:bottomLeftRadius="70dp" android:bottomRightRadius="70dp"/>
 
 </shape>
