--- a/app/src/main/res/layout/fragment_my_booking.xml
+++ b/app/src/main/res/layout/fragment_my_booking.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     tools:context=".BottomFragments.MyBookingFragment">
 
@@ -21,6 +22,7 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:id="@+id/addressText"
             android:layout_gravity="center"
             android:layout_weight="10"
             android:drawableLeft="@drawable/ic_baseline_location_on_24"
@@ -43,34 +45,29 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="30dp"
+            android:layout_height="40dp"
             android:layout_gravity="center"
             android:layout_marginLeft="20dp"
             android:layout_marginRight="20dp"
             android:layout_marginBottom="20dp"
-            android:background="@drawable/border2_gray"
+            android:layout_marginTop="10dp"
             android:gravity="center"
             android:orientation="horizontal"
             android:weightSum="10">
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="2"
-                android:drawableLeft="@drawable/ic_baseline_search_24"
-                android:paddingStart="5dp" />
 
-            <TextView
-                android:layout_width="match_parent"
+            <androidx.appcompat.widget.SearchView
+                android:layout_width="0dp"
+                android:layout_weight="10"
+                android:id="@+id/search_view"
+                android:background="@drawable/search_bg"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_weight="8"
-                android:gravity="left"
-                android:hint="Search for services and packages"
-                android:paddingStart="10dp"
-                android:textColor="@color/gray"
-                android:textSize="16sp"
-                android:textStyle="bold" />
+                app:queryHint="search for services and packages.."
+                app:iconifiedByDefault="false"/>
+
+
+
+
 
         </LinearLayout>
 
@@ -93,11 +90,11 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
+            android:text="Categories"
+            android:textColor="@color/black"
             android:layout_weight="10"
             android:gravity="left"
-            android:hint="Categories"
             android:paddingStart="10dp"
-            android:textColor="@color/black1"
             android:textSize="20sp"
             android:textStyle="bold" />
 
