--- a/app/src/main/res/layout/fragment_my_ride.xml
+++ b/app/src/main/res/layout/fragment_my_ride.xml
@@ -6,117 +6,90 @@
     android:orientation="vertical"
     tools:context=".BottomFragments.MyRideFragment">
 
+
     <LinearLayout
-        android:id="@+id/linerLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="20dp"
-        android:layout_marginTop="5dp"
-        android:layout_marginRight="30dp"
-        android:layout_marginBottom="10dp"
-        android:gravity="center"
-        android:orientation="horizontal"
-        android:weightSum="10">
+        android:id="@+id/placeLocationLyt"
+        android:layout_marginTop="10dp"
+        android:weightSum="10"
+        android:orientation="horizontal">
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:src="@drawable/ic_baseline_location_on_24"/>
+
 
         <TextView
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_weight="10"
-            android:drawableLeft="@drawable/ic_baseline_location_on_24"
-            android:gravity="left"
-            android:hint="Pune"
-            android:paddingStart="10dp"
-            android:textColor="@color/black1"
-            android:textSize="20sp"
-            android:textStyle="bold" />
+            android:layout_weight="8"
+            android:textColor="@color/black"
+            android:text="Current Location"
+            android:textStyle="bold"
+            android:textSize="15sp"/>
+
 
     </LinearLayout>
+
 
     <LinearLayout
-        android:id="@+id/linerLayout1"
         android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:layout_below="@id/linerLayout"
-        android:gravity="center"
+        android:layout_height="wrap_content"
+        android:id="@+id/lyt2"
+        android:layout_below="@+id/placeLocationLyt"
         android:orientation="vertical">
 
-        <LinearLayout
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/filledTextField"
+            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
             android:layout_width="match_parent"
-            android:layout_height="30dp"
-            android:layout_gravity="center"
-            android:layout_marginLeft="20dp"
-            android:layout_marginRight="20dp"
-            android:layout_marginBottom="20dp"
-            android:background="@drawable/border2_gray"
-            android:gravity="center"
-            android:orientation="horizontal"
-            android:weightSum="10">
+            android:layout_marginTop="4dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            android:layout_height="wrap_content"
+            android:hint="Enter Pickup Location">
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="2"
-                android:drawableLeft="@drawable/ic_baseline_search_24"
-                android:paddingStart="5dp" />
-
-            <TextView
+            <!--this is the actual edit text which takes the input-->
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/pickUpLocation"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_weight="8"
-                android:gravity="left"
-                android:hint="Enter Pickup Location"
-                android:paddingStart="10dp"
-                android:textColor="@color/gray"
-                android:textSize="16sp"
-                android:textStyle="bold" />
+                android:layout_centerHorizontal="true"
+                android:layout_centerVertical="true"
+                android:ems="10"
+                android:layout_height="wrap_content" />
 
-        </LinearLayout>
+        </com.google.android.material.textfield.TextInputLayout>
+
+
+
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/filledTextField2"
+            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+            android:layout_width="match_parent"
+            android:layout_marginTop="10dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            android:layout_height="wrap_content"
+            android:hint="Where to ?">
+
+            <!--this is the actual edit text which takes the input-->
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/finalLocation"
+                android:layout_width="match_parent"
+                android:layout_centerHorizontal="true"
+                android:layout_centerVertical="true"
+                android:ems="10"
+                android:layout_height="wrap_content" />
+
+        </com.google.android.material.textfield.TextInputLayout>
+
+
 
     </LinearLayout>
 
-    <LinearLayout
-        android:id="@+id/linerLayout2"
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:layout_below="@+id/linerLayout1"
-        android:gravity="center"
-        android:orientation="vertical">
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="30dp"
-            android:layout_gravity="center"
-            android:layout_marginLeft="20dp"
-            android:layout_marginRight="20dp"
-            android:layout_marginBottom="20dp"
-            android:background="@drawable/border2_gray"
-            android:gravity="center"
-            android:orientation="horizontal"
-            android:weightSum="10">
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="2"
-                android:drawableLeft="@drawable/ic_baseline_search_24"
-                android:paddingStart="5dp" />
-
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_weight="8"
-                android:gravity="left"
-                android:hint="Where to?"
-                android:paddingStart="10dp"
-                android:textColor="@color/gray"
-                android:textSize="16sp"
-                android:textStyle="bold" />
-
-        </LinearLayout>
-
-    </LinearLayout>
 
 </RelativeLayout>
